clean project to keep unity only

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
+.vs
 *.user
-*.userprefs
-*.suo
-*.sln.ide
-*DS_Store
-_ReSharper.*
-.nuget/
-.vs/
-[Bb]in/
-[Oo]bj/
-packages/
-artifacts/
-tests/JValue.Benchmarks/BenchmarkDotNet.Artifacts/
-upm/Assets/Plugins/Editor/JetBrains/
+obj
+bin
+.idea
+.DS_Store
+.localhistory
+.history
+/target
+project
+
+Library
+Logs
+Temp
+*.csproj
+*.sln
+.vscode
